@@ -234,14 +234,15 @@ var Util, DOM, CloudFunc, CloudCmd;
                 DOM.moveCurrent,            /* f6 */
                 DOM.promptNewDir,           /* f7 */
                 DOM.promptDeleteSelected,   /* f8 */
+                CloudCmd.Menu,              /* f9 */
             ];
         
-        for (i = 1; i <= 8; i++) {
+        for (i = 1; i <= 9; i++) {
             lButton             = 'f' + i,
             lEl                 = DOM.getById('f' + i);
             lKeysPanel[lButton] = lEl;
             
-            if( i === 1 || i === 3 || i === 4)
+            if (i === 1 || i === 3 || i === 4 || i === 9)
                 Events.addOneTime('click', lFuncs[i], lEl);
             else
                 Events.addClick(lFuncs[i], lEl);
