@@ -29,6 +29,7 @@ var CloudCmd, Util, DOM, JsDiff, ace;
             ]);
             
             DOM.Events.addKey(listener);
+            DOM.setButtonKey('f4', Edit.show);
             
             delete Edit.init;
         };
